--- a/views/home.ejs
+++ b/views/home.ejs
@@ -94,7 +94,20 @@
         }
 
         function addToCart(productID) {
-            console.log("added")
+            fetch(`http://localhost:3000/cart/add/${productID}`, {
+                method: 'POST', 
+                headers: {
+                    'Content-Type': 'application/json'
+                }
+            }).then(response => {
+                if (response.ok) {
+                    console.log("Product added to the cart succesfully!")
+                } else {
+                    console.error("Failed to add product to cart")
+                }
+            }).catch(error => {
+                console.error("An error occured while adding product to the cart")
+            })
         }
 
     </script>
